# kubos-old

./: .gitignore  FreeRTOSConfig.h  README  wscript
demo/: .tmuxinator.yml  config.yml  schema.json  start.sh
demo/payload/: README.rst  app.py  main.py  schema.py
demo/radio-handler/: README.rst  app.py  main.py
demo/telemetry-handler/: app.py  models.py  requirements.txt
demo/telemetry-poller/: main.py
docs/: Doxyfile  DoxygenLayout.xml  architecture-overview.rst  index.rst  kubos-arch.md  kubos-linux-overview.md  main.md
docs/applications/: example-mission-application.rst  index.rst  what-is-an-application.rst
docs/architecture/: index.rst
docs/dev-docs/: changelog.rst  kubos-standards.rst
docs/linux-docs/: kubos-linux-on-bbb.rst  kubos-linux-on-mbm2.rst  working-with-the-bbb.rst  working-with-the-mbm2.rst
docs/services/: graphql.rst  hardware-services.rst  index.rst  what-is-a-service.rst
evented-control/: ecp.c  ecp.h  module.json
events-broker/: module.json
kubos-events/: module.json
libcsp/: CMakeLists.txt
libzmq/: CMakeLists.txt  module.json
linux-telemetry-service/: config.json
nanomsg/: CMakeLists.txt  halp  module.json
radio-controller/: module.json
radio-controller-bin/: module.json
radio-handler/: app.py
slash/: .gitignore  module.json
slash/src/: CMakeLists.txt  base16.h  libslash.h.in  slash.c  slash_asf.c  slash_csp.c
src/: base16.c
telemetry/: main.c  telemetry.c  telemetry.h
telemetry_handler/: README.rst  app.py  models.py  requirements.txt  schema.py
vm/: README.md  Vagrantfile  provision.sh
(+154 files in other folders)
